--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 
   "license": "MIT",
   "require": {
-    "php" : "^7.2",
+    "php": "^7.4|^8.0",
     "illuminate/support": "^6.0",
     "illuminate/console": "^6.0",
     "illuminate/database": "^6.0",
