--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
   "license": "MIT",
   "require": {
     "php": "^7.4|^8.0",
-    "illuminate/support": "^6.0",
-    "illuminate/console": "^6.0",
-    "illuminate/database": "^6.0",
-    "illuminate/filesystem": "^6.0"
+    "illuminate/support": "~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0.0|^7.0.0|^8.0.0",
+    "illuminate/console": "~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0.0|^7.0.0|^8.0.0",
+    "illuminate/database": "~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0.0|^7.0.0|^8.0.0",
+    "illuminate/filesystem": "~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0.0|^7.0.0|^8.0.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.0",
